--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/Index.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/Index.cshtml
@@ -29,7 +29,7 @@
                 <div class="d-flex justify-content-center">
                     <span class="password-lost mb-5"> Don't have an account? <a asp-controller="Auth" asp-action="Register">Create an account</a></span>
                 </div>
-                <a href="#" class=" d-flex p-5  mt-5 justify-content-center privacy">Privacy Policy</a>
+                <a asp-controller="PrivacyPolicy" asp-action="PrivacyPolicy" class=" d-flex p-5  mt-5 justify-content-center privacy">Privacy Policy</a>
 
             </form>
         </div>
