--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/CmsPage.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/CmsPage.cshtml
@@ -1,14 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "User";
+    ViewData["Title"] = "Privacy Policy";
     Layout = "_AdminLayout";
 }
 @model CI_Platform.Entities.ViewModels.AdminCmsViewModel
 <div class="container-fluid my-5 mx-2">
     <h3 class="pb-1 border-bottom"><span class="heading-underline pb-1"> CMS Page </span></h3>
 
-    @*    add button modal*@
+    @*    add button partial view call*@
 
     <div id="AddOrUpdatePrivacyPages"></div>
+
+
     <div class="table-responsive m-3">
         <div class="d-flex my-4">
             <div class="admin-search-box d-flex align-items-center border">
@@ -31,54 +33,54 @@
                 </tr>
             </thead>
             <tbody>
-                @* @foreach (var users in Model.users)
+                @foreach (var cms in Model.CmsList)
                 {
-                <tr class="align-middle">
-                <td>@users.FirstName</td>
-                <td>@users.LastName</td>
-                <td>@users.Email</td>
-                <td>@users.EmployeeId</td>
-                <td>@users.Department</td>
-                <td>
-                @if (@users.Status == true)
-                {
-                <button class="btn bg-light text-success">Active</button>
+                    <tr class="align-middle">
+                        <td>@cms.Title</td>
+                        <td>
+                            @if (@cms.Status == true)
+                            {
+                                <button class="btn bg-light text-success">Active</button>
+                            }
+                            else
+                            {
+                                <button class=" btn bg-light text-danger">In Active</button>
+                            }
+                        </td>
+                        <td>
+                            <button class="btn p-0" id="EditBtnCmsPage" data-cms-id="@cms.CmsPageId">
+                                <i class="bi bi-pencil-square"></i>
+                            </button>
+
+                            <button class="p-0 btn" data-bs-toggle="modal" id="DeleteCmsBtn" data-bs-target="#DeleteCms" data-cms-id="@cms.CmsPageId">
+                                <i class="bi bi-trash"> </i>
+                            </button>
+
+
+                        </td>
+                    </tr>
                 }
-                else
-                {
-                <button class=" btn bg-light text-danger">In Active</button>
-                }
-                </td>
-                <td>
-                <button class="btn p-0 EditButtonDataFetch" id="TimeMissionEditBtn" data-user-id="@users.UserId">
-                <i style="color: #F88634;" class="bi bi-pencil-square"></i>
-                </button>
-
-                <button class="p-0 btn" data-bs-toggle="modal" data-bs-target="#DeleteUser">
-                <i class="bi bi-trash"> </i>
-                </button>
-
-                <div class="modal fade" id="DeleteUser" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                <div class="modal-content">
-                <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                <div>Are you sure you want to delete @users.FirstName @users.LastName ?? </div>
-                </div>
-                <div class="modal-footer">
-                <button type="button" class="me-3 btn rounded-pill btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-                <a class="btn rounded-pill btn-outline-danger" href="@Url.Action("DeleteUser", "Admin", new { UserId = users.UserId })">Delete</a>
-
-                </div>
-                </div>
-                </div>
-                </div>
-                </td>
-                </tr>
-                }*@
         </table>
+        <div class="modal fade" id="DeleteCms" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <form method="post">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <input name="HiddenCmsId" id="HiddenCmsId" type="hidden" />
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div>Are you sure you want to delete this ?? </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="me-3 btn rounded-pill btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" asp-controller="Admin" asp-action="DeleteCmsPage" class="btn rounded-pill btn-outline-danger">Delete</button>
+
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
