--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AdminLayout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AdminLayout.cshtml
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.bootstrap5.min.css">
+
+
 </head>
 
 
@@ -38,7 +40,7 @@
             <ul>
                 <!-- <div class="active-tab"></div> -->
                 <li class="tooltip-element" data-tooltip="0">
-                    <a asp-controller="Admin" asp-action="User" data-active="0">
+                    <a asp-controller="Admin" asp-action="User" class="nav-link" data-active="0">
                         <div class="icon">
                             <i class="fa-solid fa-user"></i>
 
@@ -47,7 +49,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="1">
-                <a asp-controller="Admin" asp-action="CmsPage" data-active="1">
+                <a asp-controller="Admin" asp-action="CmsPage" class="nav-link"  data-active="1">
                         <div class="icon">
                             <i class="fa-solid fa-file-lines"></i>
                         </div>
@@ -55,7 +57,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="2">
-                    <a href="#" data-active="2">
+                <a href="#" data-active="2" class="nav-link">
                         <div class="icon">
                             <i class="bi bi-bullseye"></i>
                         </div>
@@ -63,7 +65,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="3">
-                    <a href="#" data-active="3">
+                <a asp-controller="Admin" asp-action="MissionTheme" data-active="3" class="nav-link">
                         <div class="icon">
                             <i class="bi bi-wallet-fill"></i>
                         </div>
@@ -71,7 +73,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="4">
-                    <a href="#" data-active="4">
+                <a asp-controller="Admin" asp-action="MissionSkill" data-active="4" class="nav-link">
                         <div class="icon">
                             <i class="fa-sharp fa-solid fa-screwdriver-wrench"></i>
                         </div>
@@ -79,7 +81,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="5">
-                    <a href="#" data-active="5">
+                <a href="#" data-active="5" class="nav-link">
                         <div class="icon">
                             <i class="fa-solid fa-folder"></i>
                         </div>
@@ -87,7 +89,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="6">
-                    <a href="#" data-active="6">
+                <a href="#" data-active="6" class="nav-link">
                         <div class="icon">
                             <i class="fa-duotone fa-book"></i>
                         </div>
@@ -95,7 +97,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="7">
-                    <a href="#" data-active="7">
+                <a href="#" data-active="7" class="nav-link">
                         <div class="icon">
                             <i class="bi bi-card-heading"></i>
                         </div>
@@ -180,7 +182,7 @@
 
         <header class="container-fluid">
           <div class=" header-box ">
-                <div>Thursday, November 3, 2022, 10:06 AM</div>
+                <div id="datetime"></div>
               
                    <div class=" nav-item dropdown">
                         <a class="nav-link d-flex me-2 align-items-center dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink"
@@ -209,6 +211,8 @@
         <partial name="_Notification" />
         @RenderBody()
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/tinymce@5/tinymce.min.js"></script>
 @*    datatable*@
    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
@@ -233,6 +237,7 @@
                     pagingType: 'full_numbers',
                     lengthChange: false,
                     info: false,
+                columnDefs: [{ orderable: false, targets: -1 }]
                 });
             $('#searchUser').on('keyup', function () {
                 dataTable.search($(this).val()).draw();
