--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/MissionSkill.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/MissionSkill.cshtml
@@ -70,7 +70,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <div>Are you sure you want to delete this ?? </div>
+                            <span>Are you sure you want to delete this ?? </span>
                         </div>
                         <div class="modal-footer">
 
