--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
     //var Id = ViewBag.Id;
     var email = ViewBag.email;
     var Username = ViewBag.Username;
-
+    var Avtar = ViewBag.Avtar;
     var Id = Convert.ToInt64(ViewBag.UserId);
 }
 
@@ -169,27 +169,7 @@
                         </ul>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link ms-3 pt-2 dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-
-
-                            <img class="icon rounded-circle" src="~/images/user-img.png">
-
-                            @Username  <span id="user-id d-none"> @Id </span>
-                            <img src="~/images/drop-down.png">
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" asp-controller="User" asp-action="UserProfile">My Profile</a></li>
-                            <li><a class="dropdown-item" asp-controller="VolunteeringTimesheet" asp-action="VolunteeringTimesheet">Volunteering Timesheet</a></li>
-                            <li class="dropdown-divider"></li>
-                            <li>
-                                <a asp-controller="Auth" asp-action="Logout" class="dropdown-item">
-                                    Logout
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
+                    @await Component.InvokeAsync("UserHeader", "_ProfileSection")
 
 
                 </div>
